[package]
name = "sharedmem"
version = "0.3.0-devel"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "MIT"
description = "Shared memory primitives."
repository = "https://github.com/peterhj/sharedmem"
keywords = ["shared", "memory", "shm", "shmem"]
readme = "README.md"

[dependencies]
memmap = "^0.7"
